--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "HTML/CSS framework for creating App Store-like user interfaces",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt build",
+    "test": "npm run build"
   },
   "repository": {
     "type": "git",
