--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "storeui",
   "version": "1.0.0",
   "buildVersion": "1.0",
-  "buildNumber": "11",
-  "buildRevision": "18",
+  "buildNumber": "13",
+  "buildRevision": "26",
   "description": "HTML/CSS framework for creating App Store-like user interfaces",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-modify-json": "^0.1.3",
+    "grunt-newer": "^1.3.0",
     "grunt-text-replace": "^0.4.0"
   }
 }
